2003-12-13  Patrik Torstensson <p@rxc.se>

	* marshal.c (mono_remoting_wrapper): Fix bug 48015, using TP as this 
	instead of unwrapped server.

2003-12-12  Zoltan Varga  <vargaz@freemail.hu>

	* verify.c (check_corlib): Fix field index.

2003-12-10  Zoltan Varga  <vargaz@freemail.hu>

	* icall.c: Applied patch from Todd Berman (tbermann@gentoo.org). New
	GetGacPath icall.

2003-12-10  Bernie Solomon  <bernard@ugsolutions.com>

	* process.c:  (ves_icall_System_Diagnostics_Process_GetWorkingSet_internal
	ves_icall_System_Diagnostics_Process_SetWorkingSet_internal):
	cope with sizeof(size_t) != sizeof(guint32).

2003-12-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* process.[ch]: the 'pid' field in MonoProcInfo stores GetLastError
	in case of failure.

2003-12-10  Mark Crichton <crichton@gimp.org>

	* icall.c: removed the GetNonZeroBytes.  We now handle this case
	in managed code.

	* rand.c, rand.h: Same here.  Also cleaned up the clode slightly.

Tue Dec 9 15:36:18 CET 2003 Paolo Molaro <lupus@ximian.com>

	* class.h, class.c, icall.c, marshal.c, object.c: ignore fields
	marked as deleted.

2003-12-09  Zoltan Varga  <vargaz@freemail.hu>

	* verify.c (check_corlib): Handle the case when the version field is 
	initialized by a static constructor.

2003-12-08  Patrik Torstensson  <p@rxc.se>

    * rand.c (InternalGetBytes): Implemented win32 version with cryptapi

2003-12-08  Martin Baulig  <martin@ximian.com>

	* icall.c (ves_icall_TypeBuilder_define_generic_parameter): Return
	a MonoReflectionGenericParameter, also take the parameter index
	and name as arguments.
	(ves_icall_MethodBuilder_define_generic_parameter): Likewise.
	(ves_icall_MonoGenericParam_initialize): New interncall.
	(ves_icall_Type_make_byref_type): New interncall.

	* reflection.h (MonoReflectionGenericParam): Derive from
	MonoReflectionType, not just from MonoObject.  Added `refobj' and
	`index' fields.

	* reflection.c (mono_reflection_define_generic_parameter): Create