@@ -12,8 +12,6 @@
 #include <signal.h>
 #include <ctype.h>
 
-#define MONO_CORLIB_VERSION 1
-
 /*
  * Pull the list of opcodes
  */
@@ -2599,46 +2597,7 @@ check_corlib (MonoImage *corlib)
 	const NameSpaceDesc *ndesc;
 	gint struct_offset;
 	GString *result = NULL;
-	guint32 i, cindex, version;
-	guint32 constant_cols [MONO_CONSTANT_SIZE];	
 
-	/* Check corlib version */
-	klass = mono_class_from_name (corlib, "System", "Environment");
-	mono_class_init (klass);
-	for (i = 0; i < klass->field.count; ++i) {
-		if (strcmp ("mono_corlib_version", klass->fields [i].name) == 0)
-			break;
-	}
-	if (i < klass->field.count) {
-		cindex = mono_metadata_get_constant_index (corlib, MONO_TOKEN_FIELD_DEF | (klass->field.first + i + 1), 0);
-		if (cindex) {
-			mono_metadata_decode_row (&corlib->tables [MONO_TABLE_CONSTANT], cindex - 1, constant_cols, MONO_CONSTANT_SIZE);
-			version = 0;
-			switch (constant_cols [MONO_CONSTANT_TYPE]) {
-			case MONO_TYPE_U1: {
-				guint8 *version_ptr = (guint8*)mono_metadata_blob_heap (corlib, constant_cols [MONO_CONSTANT_VALUE]);
-				version = *version_ptr;
-				break;
-			}
-			case MONO_TYPE_U2: {
-				guint16 *version_ptr = (guint16*)mono_metadata_blob_heap (corlib, constant_cols [MONO_CONSTANT_VALUE]);
-				version = read16 (version_ptr);
-				break;
-			}
-			default:
-				g_assert_not_reached ();
-			}
-			if (version != MONO_CORLIB_VERSION) {
-				result = g_string_new ("");
-				g_string_append_printf (result, "expected corlib version %d, found %d.\n", MONO_CORLIB_VERSION, version);
-			}
-		}
-	}
-	else {
-		result = g_string_new ("");
-		g_string_append_printf (result, "Cannot find field System.Environment::mono_corlib_version\n");
-	}
-	
 	for (ndesc = namespaces_to_check; ndesc->name; ++ndesc) {
 		for (cdesc = ndesc->types; cdesc->name; ++cdesc) {
 			klass = mono_class_from_name (corlib, ndesc->name, cdesc->name);
